--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,25 +3,21 @@
     <ion-title>
       Olá
     </ion-title>
-    <ion-fab href="/home/lista-pedido/" class="button-native" vertical="bottom" horizontal="end">
-      <ion-fab-button>
-        <ion-icon name="apps"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
+    <ion-button slot="end" href='/lista-pedido'>List</ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card *ngFor="let usuario of novo_usuarios">
+  <ion-card *ngFor="let usuario of usuarios">
     <ion-card-header>
-      <ion-card-title>{{novo_usuario.nome}}</ion-card-title>
-      <img src="{{novo_usuario.imagem}}" alt="Imagem">
+      <ion-card-title>{{usuario.nome}}</ion-card-title>
+      <img src="{{usuario.imagem}}" alt="Imagem">
     </ion-card-header>
 
     <ion-buttons slot="end">
-      <ion-button (click)="abrir_modal()">
-          <ion-icon name="add"></ion-icon>
-      </ion-button>
+      <ion-button (click)="abrir_modal()" color="dark"> ATUALIZAR USUARIO</ion-button>
     </ion-buttons>
   </ion-card>
+
+  
 </ion-content>
