--- a/src/app/novo-pedido-modal/novo-pedido-modal.page.html
+++ b/src/app/novo-pedido-modal/novo-pedido-modal.page.html
@@ -30,7 +30,7 @@
       <ion-input [(ngModel)]="novo_pedido.valor"></ion-input>
     </ion-item>
 
-    <ion-button expand="full" (click)="add()">Enviar</ion-button>
+    <ion-button expand="full" (click)="add()">OK</ion-button>
 
   </ion-list>
 </ion-content>
