--- a/src/app/lista-pedido/lista-pedido.page.html
+++ b/src/app/lista-pedido/lista-pedido.page.html
@@ -1,13 +1,16 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>ListaPedido</ion-title>
+    <ion-buttons slot="start">
+      <ion-button href="/home">Inicio</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
 
-    <ion-item *ngFor="let pedido of pedidos" href='/pedido-detail/{{pedido.descricao}}'>
+    <ion-item *ngFor="let pedido of pedidos" href='/pedido-detail/{{pedido.prato}}'>
 
       <ion-item-sliding>
 
@@ -27,9 +30,21 @@
           <ion-label>{{pedido.valor}}</ion-label>
         </ion-item>
 
+        <ion-item-options side="end">
+          <ion-item-option (click)="excluir(pedido)">
+            <ion-icon name="trash"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+
       </ion-item-sliding>
 
     </ion-item>
 
   </ion-list>
+
+  <ion-buttons slot="end">
+      <ion-button (click)="exibir_modal()">
+          <ion-icon name="add"></ion-icon>
+      </ion-button>
+    </ion-buttons>
 </ion-content>
